# zeta-daw

./: .clang-tidy  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  HEGEL.md  README.md  application.cpp  application.hpp  build.sh  build_debug.sh  configuration.cpp  configuration.hpp  issue-47-design.md  loop_slot.cpp  loop_slot.hpp  loop_slot_fsm.cpp  loop_slot_fsm.hpp  loop_slot_group.cpp  loop_slot_group.hpp  loop_timing.cpp  loop_timing.hpp  looper-fsm.d2  looper_fsm.cpp  looper_fsm.hpp  main.cpp  midi.cpp  midi.hpp  midi2.cpp  midi_control_change_mapping.cpp  midi_control_change_mapping.hpp  midi_event.cpp  midi_input.cpp  midi_input.hpp  midi_looper  octave_transposer.cpp  octave_transposer.hpp  pending_take.cpp  pending_take.hpp  (+7 more)
.github/workflows/: ci.yml
tests/: configuration_test.cpp  current_behavior_test.cpp  fake_fluidsynth.cpp  fake_fluidsynth.hpp  fake_midi_input.cpp  fake_midi_input.hpp  loop_slot_fsm_test.cpp  loop_slot_test.cpp  loop_timing_test.cpp  looper_fsm_test.cpp  midi_control_change_mapping_test.cpp  midi_event_test.cpp  midi_test.cpp  octave_transposer_test.cpp  pending_take_test.cpp  soundfont_selector_test.cpp
